fix windows horizontal scroll issue

--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,6 +1,11 @@
 $standard-max-width: 600px;
 $standard-margin: 25px;
 
+@mixin full-width {
+  width: 100vw;
+  max-width: 100%;
+}
+
 .layout.landing-page {
   > main {
     > .sky {
@@ -12,7 +17,7 @@ $standard-margin: 25px;
       background-image: linear-gradient(to bottom, $human-blue, $human-pink);
       min-height: 700px;
       height: 100vh;
-      width: 100vw;
+      @include full-width;
 
       > .new-hero {
         grid-column: 2;
@@ -105,7 +110,7 @@ $standard-margin: 25px;
     > .post-sky1 {
       position: relative;
       top: -3px; // ugh
-      width: 100vw;
+      @include full-width;
       background-image: linear-gradient(to bottom, $human-blue, rgba(139, 160, 187, 1) 77%, white 100%);
 
       $astronaut-width: 44.166666667%;
